bug fix. fixed footer alignment for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,14 +94,14 @@ footer {
 
 .social-media {
   text-align: center;
-  
   }
 
 .social-media>li {
   display: inline-block;
   margin-right: 5em;
   vertical-align:bottom;
-  padding: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .social-media i {
